# command-line-bio

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-testpypi.yml  publish.yml
src/clb/: main.py
src/clb/gff/: gff_database.py  transcript_query.py
tests/: tests_cli.py
tests/clb/gff/: test_gff_database.py
tests/data/: tiny.gff
