[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "command-line-bio"
version = "0.0.7"
description = "Command line tools for working with gff, fasta, and bioinformatics databases."
authors = [{ name = "Jay Pleyte", email = "jgit.bash495@passmail.com" }]
dependencies = [
    "gffutils",
    "tabulate",    
]
requires-python = ">=3.9"
readme = {file = "README.md", content-type = "text/markdown"}
license-files = ["LICENSE"]
keywords = ["gff", "refseq", "ccds" ]

[project.scripts]
clb = "clb.main:main" 

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/jPleyte/command-line-bio"
Repository = "https://github.com/jPleyte/command-line-bio.git"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "gffutils",
    # Add any other tools needed just for testing here
]